--- a/backend/package.json
+++ b/backend/package.json
@@ -1,12 +1,16 @@
 {
   "dependencies": {
+    "@supabase/supabase-js": "^2.49.4",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "helmet": "^8.1.0",
+    "morgan": "^1.10.0",
     "nodemon": "^3.1.9"
   },
   "name": "backend",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "app.js",
   "type": "module",
   "scripts": {
     "dev": "nodemon app.js"
