--- a/backend/package.json
+++ b/backend/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "@google/genai": "^0.10.0",
     "@supabase/supabase-js": "^2.49.4",
     "bcrypt": "^5.1.1",
     "cookie-parser": "^1.4.7",
