feat: implement backend structure with Express, Supabase integration, and routing fix: update Supabase client initialization to use correct environment variables fix: adjust HTML and JavaScript file paths for consistency fix: remove alert for error messages in sell-item script

--- a/backend/package.json
+++ b/backend/package.json
@@ -16,10 +16,11 @@
   },
   "name": "backend",
   "version": "1.0.0",
-  "main": "app.js",
+  "main": "index.js",
   "type": "module",
   "scripts": {
-    "dev": "nodemon app.js"
+    "dev": "nodemon index.js",
+    "start": "node index.js"
   },
   "author": "",
   "license": "ISC",
